[gd_scene load_steps=3 format=3 uid="uid://byyhr4q62qlvc"]

[ext_resource type="Script" path="res://scripts/xword_manager.gd" id="1_06tm1"]

[sub_resource type="LabelSettings" id="LabelSettings_yb3q4"]
font_size = 32

[node name="xword_manager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06tm1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 134.0
offset_top = -36.0
offset_right = 204.0
offset_bottom = 34.0
grow_vertical = 2
text = "1"

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 334.0
offset_top = -36.0
offset_right = 404.0
offset_bottom = 34.0
grow_vertical = 2
text = "2"

[node name="Button3" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 534.0
offset_top = -36.0
offset_right = 604.0
offset_bottom = 34.0
grow_vertical = 2
text = "3"

[node name="Button4" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 734.0
offset_top = -36.0
offset_right = 804.0
offset_bottom = 34.0
grow_vertical = 2
text = "4"

[node name="Button5" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 934.0
offset_top = -36.0
offset_right = 1004.0
offset_bottom = 34.0
grow_vertical = 2
text = "5"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 394.0
offset_top = 42.0
offset_right = 731.0
offset_bottom = 90.0
text = "Выберите кроссворд"
label_settings = SubResource("LabelSettings_yb3q4")

[node name="main" type="Button" parent="."]
layout_mode = 0
offset_left = 1002.0
offset_top = 568.0
offset_right = 1105.0
offset_bottom = 599.0
text = "На главную"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="main" to="." method="_on_main_pressed"]
